feat: introduce support for multiple group prefixes and patterns
Refs: #81