@@ -4,6 +4,7 @@ import lombok.Data;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
@@ -29,8 +30,11 @@ public class GroupPrefixes {
             return;
         }
         Object value = parameters.get(GROUP_PREFIX_NAME);
-        if (value instanceof List<?>) {
-            this.prefixes = List.copyOf((List<String>) value);
+        if (value instanceof List<?> list) {
+            // Defensive copy via ArrayList: tolerates null entries (which List.copyOf rejects)
+            // and decouples from the source list's mutability. UserSynchronizationJobUnit drops
+            // null/blank entries during init.
+            this.prefixes = Collections.unmodifiableList(new ArrayList<>((List<String>) list));
         } else if (value instanceof String s) {
             this.prefixes = List.of(s);
         } else {
